--- a/src/template.html
+++ b/src/template.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Boilerplate React App for MET frontends"
+      content="Annotated Atlas if a frontend for the WeaMyL-project"
     />
-    <title>MET React Boilerplate</title>
+    <title>Annotated Atlas</title>
   </head>
   <body style="margin: 0px; padding: 0px">
     <noscript>You need to enable JavaScript to run this app.</noscript>
