--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Annotated Atlas if a frontend for the WeaMyL-project"
+      content="Annotated Atlas is a frontend for the WeaMyL-project"
     />
     <title>Annotated Atlas</title>
   </head>
